--- a/day11~12/index.html
+++ b/day11~12/index.html
@@ -7,36 +7,37 @@
 </head>
 
 <body>
-  <table class="calculator">
-    <tr>
-      <td colspan="3"><span>0</span></td>
-      <td><input type="button" class="cancel" value="C" /></td>
-    </tr>
-    <tr>
-      <td><input type="button" class="number" value="7" /></td>
-      <td><input type="button" class="number" value="8" /></td>
-      <td><input type="button" class="number" value="9" /></td>
-      <td><input type="button" class="operator" value="+" /></td>
-    </tr>
-    <tr>
-      <td><input type="button" class="number" value="4" /></td>
-      <td><input type="button" class="number" value="5" /></td>
-      <td><input type="button" class="number" value="6" /></td>
-      <td><input type="button" class="operator" value="-" /></td>
-    </tr>
-    <tr>
-      <td><input type="button" class="number" value="1" /></td>
-      <td><input type="button" class="number" value="2" /></td>
-      <td><input type="button" class="number" value="3" /></td>
-      <td><input type="button" class="operator" value="*" /></td>
-    </tr>
-    <tr>
-      <td colspan="2"><input type="button" class="number" value="0" /></td>
-      <td><input type="button" class="operator" value="=" /></td>
-      <td><input type="button" class="operator" value="/" /></td>
-    </tr>
-  </table>
-
+  <div class="container">
+    <table class="calculator">
+      <tr>
+        <td colspan="3" class="result"><span>0</span></td>
+        <td><input type="button" class="cancel" value="C" /></td>
+      </tr>
+      <tr>
+        <td><input type="button" class="number" value="7" /></td>
+        <td><input type="button" class="number" value="8" /></td>
+        <td><input type="button" class="number" value="9" /></td>
+        <td><input type="button" class="operator" value="+" /></td>
+      </tr>
+      <tr>
+        <td><input type="button" class="number" value="4" /></td>
+        <td><input type="button" class="number" value="5" /></td>
+        <td><input type="button" class="number" value="6" /></td>
+        <td><input type="button" class="operator" value="-" /></td>
+      </tr>
+      <tr>
+        <td><input type="button" class="number" value="1" /></td>
+        <td><input type="button" class="number" value="2" /></td>
+        <td><input type="button" class="number" value="3" /></td>
+        <td><input type="button" class="operator" value="*" /></td>
+      </tr>
+      <tr>
+        <td colspan="2"><input type="button" class="number" value="0" /></td>
+        <td><input type="button" class="operator" value="=" /></td>
+        <td><input type="button" class="operator" value="/" /></td>
+      </tr>
+    </table>
+  </div>
   <script src="src/index.js"></script>
 </body>
 
